# MAD-PDC

./: .gitignore  Install_Reqs.py  MAD.py  MAD_Matches_ARC.py  MAD_OPTIMIZATION_PLAN.md  MAD_app.py  Mad_YARA_Matchs_Arc.py  Makefile  README.md  assessment_module.py  case_manager.py  datetime_utils.py  mad_settings.json  pyproject.toml  requirements.txt  settings_manager.py  sigma_rule_manager.py  typography.py  whitelist.txt  y@ngtu.yara  yara_rule_manager.py
YDAMN/: !mmyBot.yara  !r!sSteal.yara  $uperOps.yara  0pt1tune.yara  0usaban.yara  @utoMox.yara  A$ter@r0th.yara  AT.yara  Ad0nis.yara  Adwind.yara  An@rkS.yara  AnyD3sk.yara  Async.yara  Ater@.yara  AveW.yara  B@zarLoad.yara  BBtok.yara  BadSp@ce.yara  BrazilTrojans.yara  Brute.yara  By@kug@n.yara  C3ntralStage.yara  CarnavalHeist.yara  CobaltStr1ke.yara  CwRt.yara  Cyr3x.yara  D@rkCl0ud.yara  Dcr.yara  Ech0.yara  Expir0.yara  F133td3ck.yara  F3nix.yara  F@ronics.yara  G0t0rt.yara  Gh0st.yara  Grand0r.yara  H3artB3atRM.yara  ItwoP.yara  Janelart.yara  K0i.yara  (+101 more)
analysis_modules/: README.md  __init__.py  file_string_extractor.py  file_viewer_executor.py  http_monitor.py  memory_string_extractor.py  network_monitor.py  persistence_monitor.py  privilege_helper.py  process_monitor.py  procmon_events.py  sigma_evaluator.py  sysmon_parser.py  system_wide_monitor.py  url_grabber.py  wmi_process_info.py  yarwatch.py
archive/: README.md
handlers/: __init__.py  case_handlers.py  file_handlers.py  network_handlers.py  process_handlers.py
sigma_rules/: MSP360_rmm_agent_process.yml  axis_control_network.yml  axis_control_process.yml  coro_agent_process  dns_suspicious_query.yml  file_double_extension.yml  file_exe_in_suspicious_path.yml  file_startup_folder_persistence.yml  net_suspicious_backdoor_ports.yml  proc_certutil_download.yml  proc_cmd_suspicious_execution.yml  proc_connectwise_rmm.yml  proc_create_remote_thread.yml  proc_encoded_powershell.yml  proc_lolbin_mshta.yml  proc_lolbin_regsvr32.yml  proc_lolbin_rundll32_suspicious.yml  proc_lsass_access.yml  proc_powershell_bypass.yml  proc_powershell_download_cradle.yml  proc_process_tampering.yml  proc_schtasks_lateral_movement.yml  proc_schtasks_persistence.yml  proc_wscript_cscript_execution.yml  reg_ifeo_persistence.yml  reg_run_key_persistence.yml  reg_service_persistence.yml  reg_winlogon_persistence.yml  rmm_agent_process.yml  soft_connect_agent_process.yml  tiflux_agent_process
tests/: conftest.py  test_sigma_evaluator.py
ui/: app.py  (+2 more)
(+32 files in other folders)
